--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
- "ip": "Your_minecraft_server_ip_here",
- "port": "Your_server_port_here",
- "name": "Your_bot_name_here",
+ "ip": "scoutinghedera.aternos.me",
+ "port": "35368",
+ "name": "rickastley",
  "auto-night-skip": "false",
- "loginmsg": "Your_Login_message_here"
+ "loginmsg": "nevergonnagiveyouup"
 }
